# school42-pool-django

./: README.md
d00/ex00/: myawesomescript.sh
d00/ex01/: cv.html
d00/ex02/: form.html  popup.js
d00/ex03/: copy.html
d00/ex04/: file4.js  snippets.html
d01/ex00/: var.py
d01/ex01/: numbers.py  numbers.txt
d01/ex02/: var_to_dict.py
d01/ex03/: capital_city.py
d01/ex04/: state.py
d01/ex05/: all_in.py
d01/ex06/: my_sort.py
d01/ex07/: periodic_table.html  periodic_table.py
d02/ex00/: myCV.template  render.py  settings.py
d02/ex01/: intern.py
d02/ex02/: beverages.py
d02/ex03/: beverages.py  machine.py
d02/ex04/: elem.py  tests.py
d03/ex00/: geohashing.py
d03/ex01/: my_program.py  my_script.sh
d03/ex02/: request_wikipedia.py
d03/ex03/: requirements.txt  roads_to_philosophy.py
d03/ex04/: my_script.sh
d05/d05/: settings.py  urls.py
d05/ex00/: urls.py  views.py
d05/ex01/: models.py
d05/ex02/: urls.py  views.py
d05/ex03/: models.py  urls.py  views.py
d05/ex04/: forms.py  urls.py  views.py
d05/ex05/: forms.py  urls.py  views.py
d06/: requirements.txt
d07/: requirements.txt
d08/: requirements.txt
d08/django_background_changer/: LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg
d08/django_background_changer/background_changer/: models.py  urls.py  views.py
d08/django_background_changer/background_changer/static/background_changer/: script-background.js  style.css
d08/django_background_changer/background_changer/templates/background_changer/: image_upload_form.html
d09/: requirements.txt
(+141 files in other folders)
